<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rest_time"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/restTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rest_time1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:inputType="number"
        android:maxLines="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_time"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/workTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/work_time1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:inputType="number"
        android:maxLines="1" />

</LinearLayout>