<resources>
    <string name="app_name">Pomodoro Timer</string>
    <string name="clear_notifications">Clear all</string>
    <string name="startTime">00:05</string>
    <string name="endTime">00:00</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="rest_time">Rest time:</string>
    <string name="rest_time1">Rest Time</string>
    <string name="work_time">Work Time:</string>
    <string name="work_time1">Work Time</string>
    <string name="channel_id">rest</string>
</resources>
